# prompt-engineering-for-generative-ai

./: Taskfile.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: vulnerability-fixer-agent.md
chapterone/: main.py  one.py
