[project]
name = "prompt-engineering-for-generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "cohere>=5.20.5",
    "fastapi>=0.129.0",
    "huggingface-hub>=1.4.1",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
